--- a/public/themes/lara-dark-blue/theme.css
+++ b/public/themes/lara-dark-blue/theme.css
@@ -190,6 +190,20 @@
   --primary-900:#264264;
 }
 
+.p-link {
+  text-align: left;
+  background-color: transparent;
+  margin: 0;
+  padding: 0;
+  border: none;
+  cursor: pointer;
+  user-select: none;
+}
+
+.p-link:disabled {
+  cursor: default;
+}
+
 .p-editor-container .p-editor-toolbar {
   background: #1f2937;
   border-top-right-radius: 6px;
